--- a/ShabdkoshApp/ShabdkoshApp/ShabdkoshApp.csproj
+++ b/ShabdkoshApp/ShabdkoshApp/ShabdkoshApp.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\WordsCollection.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
