--- a/ShabdkoshApp/ShabdkoshApp.Android/ShabdkoshApp.Android.csproj
+++ b/ShabdkoshApp/ShabdkoshApp.Android/ShabdkoshApp.Android.csproj
@@ -84,13 +84,15 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\drawable\xamarin_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ShabdkoshApp\ShabdkoshApp.csproj">
       <Project>{01E108A9-0E28-4A21-B1BB-92BA9CFFD4FB}</Project>
       <Name>ShabdkoshApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\shabdkosh_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
