--- a/ShabdkoshApp/ShabdkoshApp.iOS/ShabdkoshApp.iOS.csproj
+++ b/ShabdkoshApp/ShabdkoshApp.iOS/ShabdkoshApp.iOS.csproj
@@ -117,9 +117,6 @@
     <BundleResource Include="Resources\tab_feed.png" />
     <BundleResource Include="Resources\tab_feed%402x.png" />
     <BundleResource Include="Resources\tab_feed%403x.png" />
-    <BundleResource Include="Resources\xamarin_logo.png" />
-    <BundleResource Include="Resources\xamarin_logo%402x.png" />
-    <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
@@ -142,5 +139,14 @@
       <Project>{01E108A9-0E28-4A21-B1BB-92BA9CFFD4FB}</Project>
       <Name>ShabdkoshApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\shabdkosh_logo%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\shabdkosh_logo%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\shabdkosh_logo.png" />
   </ItemGroup>
 </Project>
