Finishing about page.

--- a/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0.Android/ShabdkoshApp1.0.Android.csproj
+++ b/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0.Android/ShabdkoshApp1.0.Android.csproj
@@ -84,13 +84,15 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\drawable\xamarin_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ShabdkoshApp1.0\ShabdkoshApp1.0.csproj">
       <Project>{85BF3461-0D31-4815-BD20-09B1BBE7766F}</Project>
       <Name>ShabdkoshApp1.0</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\shabdkosh_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
