--- a/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0.Android/ShabdkoshApp1.0.Android.csproj
+++ b/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0.Android/ShabdkoshApp1.0.Android.csproj
@@ -92,7 +92,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\shabdkosh_logo.png" />
+    <BundleResource Include="Resources\drawable\shabdkosh_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
