--- a/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0.iOS/ShabdkoshApp1.0.iOS.csproj
+++ b/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0.iOS/ShabdkoshApp1.0.iOS.csproj
@@ -62,6 +62,8 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="iOSNotificationManager.cs" />
+    <Compile Include="iOSNotificationReceiver.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
